# Crazy-Taxi

./: README.md  names.txt
Phase 1/: .gitignore  README.md  (+5 more)
Phase2_3/: .gitignore  CMakeLists.txt  Report.docx  instructions.html  instructions.md
Phase2_3/Reports/: ~$Report.docx
Phase2_3/assets/models/Human/Presentation1/: [Content_Types].xml
Phase2_3/assets/models/Human/Presentation1/docProps/: app.xml  core.xml
Phase2_3/assets/models/Human/Presentation1/ppt/: presentation.xml  viewProps.xml
Phase2_3/assets/models/Human/Presentation1/ppt/media/: model3d1.glb
Phase2_3/assets/models/Human/Presentation1/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
Phase2_3/assets/models/Human/Presentation1/ppt/slideMasters/: slideMaster1.xml
Phase2_3/assets/models/Human/Presentation1/ppt/slides/: slide1.xml
Phase2_3/assets/models/Human/Presentation1/ppt/slides/_rels/: slide1.xml.rels
Phase2_3/assets/models/Human/dennis-posed-004-obj/: dennis-posed-004.mtl
Phase2_3/assets/models/Human/h11/: Person.dae
Phase2_3/assets/models/Human/h12/: sonic-the-hedgehog.mtl
Phase2_3/assets/models/Human/h13/: assassins-creed-altair.mtl
Phase2_3/assets/models/Human/media/: model3d2.glb
Phase2_3/assets/models/car/: 1967-shelby-ford-mustang.mtl  backlight.mtl  car.mtl  glass.mtl
Phase2_3/assets/models/menu/: begin-text.mtl
Phase2_3/assets/shaders/: fullscreen.vert  lit.frag  lit.vert  mesh-test.frag  mesh-test.vert  texture-test.frag  textured.frag  textured.vert  tinted.frag  tinted.vert  transform-test.frag  transform-test.vert
Phase2_3/assets/shaders/postprocess/: bad_blur.frag  chromatic-aberration.frag  distortion.frag  fog.frag  grayscale.frag  radial-blur.frag  vignette.frag
Phase2_3/config/: app.jsonc
Phase2_3/config/crazy-taxi/: app.jsonc  arrow.jsonc  car-0.jsonc  car.jsonc  collision.josnc  collision.jsonc  deliver-many.jsonc  deliver.jsonc  full-scene.jsonc  full_scene.jsonc  menu-play.jsonc  menu.jsonc  no_dennis.jsonc  postprocess.jsonc  sitting.jsonc
Phase2_3/config/entity-test/: test-0.jsonc  test-1.jsonc
Phase2_3/config/light-test/: test-0.jsonc  test-1.jsonc
Phase2_3/config/material-test/: test-0.jsonc  test-1.jsonc
Phase2_3/config/mesh-test/: default-0.jsonc  default-1.jsonc  default-2.jsonc  default-3.jsonc  monkey-0.jsonc  monkey-1.jsonc  monkey-2.jsonc  monkey-3.jsonc
Phase2_3/config/pipeline-test/: b-0.jsonc  b-1.jsonc  b-2.jsonc  b-3.jsonc  b-4.jsonc  cm-0.jsonc  dm-0.jsonc  dt-0.jsonc  dt-1.jsonc  dt-2.jsonc  fc-0.jsonc  fc-1.jsonc  fc-2.jsonc  fc-3.jsonc
Phase2_3/config/postprocess-test/: test-0.jsonc  test-1.jsonc  test-2.jsonc  test-3.jsonc
Phase2_3/config/renderer-test/: test-0.jsonc  test-1.jsonc
Phase2_3/config/sampler-test/: test-0.jsonc  test-1.jsonc  test-2.jsonc  test-3.jsonc  test-4.jsonc  test-5.jsonc  test-6.jsonc  test-7.jsonc
Phase2_3/config/scripts/: gen_buildings.py  gen_passengers.py  gen_roads.py
Phase2_3/config/sky-test/: test-0.jsonc  test-1.jsonc
Phase2_3/config/texture-test/: test-0.jsonc
Phase2_3/config/transform-test/: test-0.jsonc
Phase2_3/sbmt/: chromatic-aberration.frag  mesh.hpp  pipeline-state.hpp  texture2d.hpp  textured.vert  tinted.vert  transform.cpp  vignette.frag
Phase2_3/scripts/: README.txt  compare-all.ps1  compare-group.ps1  run-all.ps1
Phase2_3/source/: main.cpp
Phase2_3/source/common/: application.cpp  application.hpp  asset-loader.cpp  asset-loader.hpp  deserialize-utils.hpp  utils.h
Phase2_3/source/common/components/: camera.cpp  camera.hpp  car-movement.cpp  car-movement.hpp  component-deserializer.hpp  free-camera-controller.cpp  free-camera-controller.hpp  light.cpp  light.hpp  mesh-renderer.cpp  mesh-renderer.hpp  movement.cpp  movement.hpp  passenger.cpp  passenger.hpp
Phase2_3/source/common/ecs/: component.hpp  entity.cpp  entity.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
Phase2_3/source/common/input/: keyboard.hpp  mouse.hpp
Phase2_3/source/common/material/: material.cpp  material.hpp  pipeline-state.cpp  pipeline-state.hpp
Phase2_3/source/common/mesh/: mesh-utils.cpp  mesh-utils.hpp  mesh.hpp  vertex.hpp
Phase2_3/source/common/shader/: shader.cpp  shader.hpp
Phase2_3/source/common/systems/: camera-view.hpp  car-movement.hpp  deliver.hpp  forward-renderer.cpp  forward-renderer.hpp  menu.hpp  movement.hpp  new-cam.hpp  passenger-movement.hpp
Phase2_3/source/common/texture/: sampler.cpp  sampler.hpp  screenshot.cpp  texture-utils.cpp  texture-utils.hpp  texture2d.hpp
Phase2_3/source/states/: entity-test-state.hpp  material-test-state.hpp  menu-state.hpp  mesh-test-state.hpp  pipeline-test-state.hpp  play-state.hpp  renderer-test-state.hpp  sampler-test-state.hpp  texture-test-state.hpp  transform-test-state.hpp
(+25 files in other folders)
